--- a/templets/index.html
+++ b/templets/index.html
@@ -1,30 +1,98 @@
-<header>
-    <title>TextUtility</title>
-    <link rel="stylesheet" href="C:\Users\ab\Desktop\Django\NewTextUtility\templets\style.css">
-</header>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MagicText.in</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
 
 <body>
-    <div id="inputside">
-        <h1 id="hed" align="center">Welcome to TextUtility</h1>
-        <hr>
-        <b>Please Enter your text below: </b>
-        <form action="/index" method="get">
-            <textarea name="text" id="firsttext" cols="30" rows="10"
-                style="width: 1383px; height: 148px;"></textarea><br>
+  <div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">MagicText.in</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Links
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/uppercase">Uppercase</a></li>
+                <li><a class="dropdown-item" href="/lowercase">Lowercase</a></li>
+                <li><a class="dropdown-item" href="/wordcount">Words Count</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="/extraspaces">Remove Extra Spaces</a></li>
+                <li><a class="dropdown-item" href="/removepunc">Remove Punctuations</a></li>
+                <li><a class="dropdown-item" href="/remove">Remove</a></li>
+                <li><a class="dropdown-item" href="/replace">Replace</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="/about">About Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="alert alert-success alert-dismissible fade show " role="alert">
+    <strong>Welcome!</strong> Before using any operations please read notes if given.
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  <div><br>
+    <h3>Please click on desired options from given below :</h3> <br>
+    <p><a href="/uppercase"
+        class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"><strong>UPPERCASE</strong></a>
+      to
+      convert each Alphabet of given text in Captial letters. </p>
+    <p><a href="/lowercase"
+        class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"><strong>lowercase</strong></a>
+      to
+      convert each Alphabet of given text in Small letters.</p>
+    <p><a href="/wordcount"
+        class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"><strong>Words
+          Count</strong></a> to
+      count total number of words</p>
+    <p><a href="/extraspaces"
+        class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"><strong>Remove
+          Extra Spaces</strong>
+      </a> to Removes Extra spaces. </p>
+    <p><a href="/removepunc"
+        class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"><strong>Remove
+          Punctuations</strong></a> to Remove All Punctuations that are ~!@#$%^&*()_+=-;'":<>/ .</p>
+    <p><a href="/remove"
+        class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"><strong>Remove</strong></a>
+      to remove
+      all accourence of desired charecters. </p>
+    <p><a href="/replace"
+        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"><strong>Replace</strong></a>
+      to
+      replace all accourence of something. </p>
+  </div>
 
-                <input type="checkbox" name="Uppercase">UPPERCASE <br>
-                <input type="checkbox" name="Lowercase">lowercase <br>
-                <input type="checkbox" name="remove">Remove <br>
-                <input type="checkbox" name="removepunc">Remove Punctuations <br>
-                <input type="checkbox" name="extraspace">Remove Extra Spaces <br>
-                <input type="checkbox" name="Wordscount">Words Count <br>
-                <input type="checkbox" name="replace">Replace <br>
 
-            <p style="padding-left: 50%;"><button type="submit">Submit</button></p>
-            <!-- <p style="padding-left: 18cm;"><button type="reset" style="padding-left: 10px; padding-right: 10px;">Reset </button></p>  -->
-        </form>
-
-    </div>
-
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 </body>
+<div align="center">
+  <hr>
+  <div class="fixed-bottom "> <cite title="Source Title"> Created by SUBHASH MISHRA 8 May 2023 </cite></div>
+</div>
+</div>
+
+</html>
